2000-08-24  Lauris Kaplinski  <lauris@helixcode.com>

	* folder-browser.c: Use e_utf8 wrappers

	* mail-config-gui.c: Use e_utf8 wrappers

2000-08-24  Peter Williams  <peterw@helixcode.com>

	* folder-browser-factory.c (control_activate): Add all the
	functions from message-list.c's popup menu to the main
	menu as well

	* message-list.c (vfolder_subject): These functions become
	public.

	* mail-callbacks.c (mark_all_seen): Don't call camel_folder_get_uids
	here. IMAP, for example, will try to communicate with the IMAP
	server during that call.

	* mail-ops.c (cleanup_fetch_mail): Tell the user
	which URL has no new mail, as they may be checking
	more than one source.
	(mail_do_flag_all_messages): New function. Flags all of
	the messages in a folder. Something of a hack. This merely
	extends the flag_messages operation; it doesn't implement
	a new one.
	(do_flag_messages et al): Fetch the uids if we need to;
	use camel_folder_free_uids if necessary, etc.
	
	* mail-tools.c (mail_tool_move_folder_contents): Add
	messages to tell the user what's going on.

2000-08-24  Christopher James Lahey  <clahey@helixcode.com>

	* folder-browser-factory.c: Fixed some warnings in the uihandler
	code.

2000-08-24  Peter Williams  <peterw@helixcode.com>

	* component-factory.c (mail_load_storages): New function.
	Loads a list of URI's as mail storages, and inserts them
	into the shell's folder tree if appropriate (really, only
	puts them into the folder tree.)
	(mail_add_new_storage): Insert a storage into the folder
	tree. Not always appropriate (eg, /var/spool/mail/user is
	a storage that shouldn't be in the folder tree.)
	(create_view): Generate the Evolution_Shell and pass it
	to folder_browser_factor_new_control so that its member
	'shell' can be set.
	(owner_set_cb): Instead of create_news_storage and
	creating the imap storages, load the news storages and
	mail storages via mail_load_storages().

	* folder-browser-factory.c (control_activate): Change to