@@ -1,3 +1,10 @@
+2000-08-25  Jeffrey Stedfast  <fejj@helixcode.com>
+
+	* mail-crypto.c (mail_crypto_openpgp_encrypt): Implemented PGP 2.x
+	encryption. We only need to get the passphrase if we plan to sign
+	the text, otherwise we don't need to worry about getting the
+	passphrase.
+
 2000-08-24  Lauris Kaplinski  <lauris@helixcode.com>
 
 	* folder-browser.c: Use e_utf8 wrappers
